--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,58 @@
-flask_sqlalchemy==3.1.1
-flask_migrate==4.0.5
-flask_wtf==1.2.1
-wtforms==3.1.2
-Flask>=2.0
-gunicorn>=21.2.0
-
+alembic==1.14.1
+asttokens==3.0.0
+backcall==0.2.0
+blinker==1.8.2
+Brotli==1.1.0
+cffi==1.17.1
+chardet==5.2.0
+click==8.1.8
+cssselect2==0.7.0
+decorator==5.2.1
+exceptiongroup==1.2.2
+executing==2.2.0
+Flask==3.0.3
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+fonttools==4.57.0
+greenlet==3.1.1
+gunicorn==23.0.0
+html5lib==1.1
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+iniconfig==2.1.0
+ipdb==0.13.13
+ipython==8.12.3
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+packaging==25.0
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.4.0
+pluggy==1.5.0
+prompt_toolkit==3.0.51
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycparser==2.22
+pydyf==0.11.0
+Pygments==2.19.1
+pyphen==0.16.0
+pytest==8.3.5
+reportlab==4.4.1
+six==1.17.0
+SQLAlchemy==2.0.41
+stack-data==0.6.3
+tinycss2==1.4.0
+tomli==2.2.1
+traitlets==5.14.3
+typing_extensions==4.13.2
+wcwidth==0.2.13
+weasyprint==61.2
+webencodings==0.5.1
+Werkzeug==3.0.6
+zipp==3.20.2
+zopfli==0.2.3.post1
