--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,32 @@
 alembic==1.14.1
+aniso8601==10.0.1
 asttokens==3.0.0
 backcall==0.2.0
 blinker==1.8.2
 Brotli==1.1.0
+certifi==2025.6.15
 cffi==1.17.1
 chardet==5.2.0
+charset-normalizer==3.4.2
 click==8.1.8
 cssselect2==0.7.0
 decorator==5.2.1
+dotenv==0.9.9
 exceptiongroup==1.2.2
 executing==2.2.0
+Faker==35.2.2
 Flask==3.0.3
+Flask-Cors==5.0.0
+Flask-JWT-Extended==4.6.0
+flask-marshmallow==1.2.1
 Flask-Migrate==4.0.5
+Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 fonttools==4.57.0
 greenlet==3.1.1
 gunicorn==23.0.0
 html5lib==1.1
+idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
 iniconfig==2.1.0
@@ -27,6 +37,8 @@ jedi==0.19.2
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==2.1.5
+marshmallow==3.22.0
+marshmallow-sqlalchemy==1.1.1
 matplotlib-inline==0.1.7
 packaging==25.0
 parso==0.8.4
@@ -40,16 +52,23 @@ pure_eval==0.2.3
 pycparser==2.22
 pydyf==0.11.0
 Pygments==2.19.1
+PyJWT==2.9.0
 pyphen==0.16.0
 pytest==8.3.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.2
 reportlab==4.4.1
+requests==2.32.4
 six==1.17.0
 SQLAlchemy==2.0.41
+SQLAlchemy-serializer==1.4.12
 stack-data==0.6.3
 tinycss2==1.4.0
 tomli==2.2.1
 traitlets==5.14.3
 typing_extensions==4.13.2
+urllib3==2.2.3
 wcwidth==0.2.13
 weasyprint==61.2
 webencodings==0.5.1
