--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asttokens==3.0.0
 backcall==0.2.0
 blinker==1.8.2
 Brotli==1.1.0
+cached-property==2.0.1
 certifi==2025.6.15
 cffi==1.17.1
 chardet==5.2.0
@@ -29,6 +30,7 @@ html5lib==1.1
 idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
+inflection==0.5.1
 iniconfig==2.1.0
 ipdb==0.13.13
 ipython==8.12.3
@@ -40,6 +42,7 @@ MarkupSafe==2.1.5
 marshmallow==3.22.0
 marshmallow-sqlalchemy==1.1.1
 matplotlib-inline==0.1.7
+mypy_extensions==1.1.0
 packaging==25.0
 parso==0.8.4
 pexpect==4.9.0
@@ -62,11 +65,13 @@ reportlab==4.4.1
 requests==2.32.4
 six==1.17.0
 SQLAlchemy==2.0.41
+sqlalchemy-orm==1.2.10
 SQLAlchemy-serializer==1.4.12
 stack-data==0.6.3
 tinycss2==1.4.0
 tomli==2.2.1
 traitlets==5.14.3
+typing-inspect==0.9.0
 typing_extensions==4.13.2
 urllib3==2.2.3
 wcwidth==0.2.13
