--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -50,6 +50,7 @@ pickleshare==0.7.5
 pillow==10.4.0
 pluggy==1.5.0
 prompt_toolkit==3.0.51
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
